--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.3",
+    "nodemon": "^3.1.10",
     "oauth-1.0a": "^2.2.6",
     "pg": "^8.16.0"
   }
