--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_URL= mongodb://127.0.0.1/WooCommerce
+DB_URL=mongodb+srv://ashishkumaryadavcse507:Ashish12@ashish.yfcpxeh.mongodb.net/WooCommerce?retryWrites=true&w=majority
 PORT = 3000
 JWT_SECRET= diploy
 
